--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -12,9 +12,10 @@
 }
 
 .qstut-calendar td {
-  padding: .5em;
+  padding: .33em;
 }
 
 .qstut-calendar td:nth-child(4) {
   min-width: 5em;
+  text-align: center;
 }
